// =============================================================================
// Scene Handler - HTTP handlers for 3D scene operations.
// =============================================================================
// This handler manages 3D scenes and their elements (walls, rooms, furniture).
// Scenes are created from recognized floor plans and can be edited in the
// interactive 3D editor.
//
// =============================================================================
package handlers

import (
	"encoding/json"
	"net/http"
	"strconv"

	"github.com/xiiisorate/granula_api/api-gateway/internal/dto"
)

// =============================================================================
// SceneHandler handles scene-related HTTP requests.
// =============================================================================

// SceneHandler provides HTTP handlers for 3D scene operations.
type SceneHandler struct {
	// sceneClient pb.SceneServiceClient
}

// NewSceneHandler creates a new SceneHandler.
func NewSceneHandler() *SceneHandler {
	return &SceneHandler{}
}

// =============================================================================
// Scene CRUD Endpoints
// =============================================================================

// GetScene godoc
// @Summary Получить сцену
// @Description Возвращает информацию о 3D сцене по ID
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Success 200 {object} dto.SceneResponse "Данные сцены"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /scenes/{id} [get]
func (h *SceneHandler) GetScene(w http.ResponseWriter, r *http.Request) {
	// TODO: Get scene ID from path
	// sceneID := chi.URLParam(r, "id")

	// TODO: Call scene gRPC service

	response := dto.SceneResponse{
		ID:           "scene-placeholder-id",
		WorkspaceID:  "workspace-id",
		FloorPlanID:  "floorplan-id",
		Name:         "Sample Scene",
		Status:       "active",
		ElementCount: 42,
		BranchCount:  3,
		Statistics: dto.SceneStatisticsResponse{
			WallsCount:     15,
			RoomsCount:     4,
			WindowsCount:   6,
			DoorsCount:     5,
			FurnitureCount: 12,
			TotalArea:      78.5,
			LivingArea:     52.3,
		},
	}

	respondJSON(w, http.StatusOK, response)
}

// ListScenes godoc
// @Summary Список сцен
// @Description Возвращает список сцен в воркспейсе
// @Tags scenes
// @Accept json
// @Produce json
// @Param workspace_id query string true "ID воркспейса" format(uuid)
// @Param page query int false "Номер страницы" default(1)
// @Param page_size query int false "Размер страницы" default(20)
// @Param status query string false "Фильтр по статусу" Enums(draft, active, archived)
// @Success 200 {object} object "Список сцен"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Security BearerAuth
// @Router /scenes [get]
func (h *SceneHandler) ListScenes(w http.ResponseWriter, r *http.Request) {
	page, _ := strconv.Atoi(r.URL.Query().Get("page"))
	if page < 1 {
		page = 1
	}
	pageSize, _ := strconv.Atoi(r.URL.Query().Get("page_size"))
	if pageSize < 1 || pageSize > 100 {
		pageSize = 20
	}

	// TODO: Call scene gRPC service

	response := map[string]interface{}{
		"scenes": []dto.SceneResponse{},
		"pagination": dto.PaginationResponse{
			Page:     page,
			PageSize: pageSize,
			Total:    0,
		},
	}

	respondJSON(w, http.StatusOK, response)
}

// UpdateScene godoc
// @Summary Обновить сцену
// @Description Обновляет название и описание сцены
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param request body object true "Данные для обновления"
// @Success 200 {object} dto.SceneResponse "Обновленная сцена"
// @Failure 400 {object} dto.ErrorResponse "Ошибка валидации"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /scenes/{id} [patch]
func (h *SceneHandler) UpdateScene(w http.ResponseWriter, r *http.Request) {
	var req map[string]interface{}
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		respondError(w, http.StatusBadRequest, "INVALID_JSON", "Invalid request body")
		return
	}

	// TODO: Call scene gRPC service

	response := dto.SceneResponse{
		ID:     "scene-id",
		Name:   "Updated Scene",
		Status: "active",
	}

	respondJSON(w, http.StatusOK, response)
}

// DeleteScene godoc
// @Summary Удалить сцену
// @Description Удаляет сцену и все связанные элементы
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Success 200 {object} dto.SuccessResponse "Сцена удалена"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /scenes/{id} [delete]
func (h *SceneHandler) DeleteScene(w http.ResponseWriter, r *http.Request) {
	// TODO: Call scene gRPC service

	respondJSON(w, http.StatusOK, dto.SuccessResponse{
		Success: true,
		Message: "Scene deleted successfully",
	})
}

// =============================================================================
// Element CRUD Endpoints
// =============================================================================

// GetElements godoc
// @Summary Список элементов сцены
// @Description Возвращает все элементы сцены (стены, комнаты, мебель)
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param type query string false "Фильтр по типу" Enums(wall, room, door, window, furniture, fixture)
// @Param branch_id query string false "ID ветки (по умолчанию main)" format(uuid)
// @Success 200 {array} dto.ElementResponse "Список элементов"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /scenes/{id}/elements [get]
func (h *SceneHandler) GetElements(w http.ResponseWriter, r *http.Request) {
	// TODO: Call scene gRPC service

	elements := []dto.ElementResponse{}
	respondJSON(w, http.StatusOK, elements)
}

// CreateElement godoc
// @Summary Создать элемент
// @Description Создает новый элемент в сцене (стена, комната, мебель и т.д.)
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param request body dto.CreateElementRequest true "Данные элемента"
// @Success 201 {object} dto.ElementResponse "Созданный элемент"
// @Failure 400 {object} dto.ErrorResponse "Ошибка валидации"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Доступ запрещен"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /scenes/{id}/elements [post]
func (h *SceneHandler) CreateElement(w http.ResponseWriter, r *http.Request) {
	var req dto.CreateElementRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		respondError(w, http.StatusBadRequest, "INVALID_JSON", "Invalid request body")
		return
	}

	// TODO: Call scene gRPC service

	response := dto.ElementResponse{
		ID:     "element-placeholder-id",
		Type:   req.Type,
		Name:   req.Name,
	}

	respondJSON(w, http.StatusCreated, response)
}

// GetElement godoc
// @Summary Получить элемент
// @Description Возвращает информацию об элементе по ID
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param element_id path string true "ID элемента" format(uuid)
// @Success 200 {object} dto.ElementResponse "Данные элемента"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Элемент не найден"
// @Security BearerAuth
// @Router /scenes/{id}/elements/{element_id} [get]
func (h *SceneHandler) GetElement(w http.ResponseWriter, r *http.Request) {
	// TODO: Call scene gRPC service

	response := dto.ElementResponse{
		ID:   "element-id",
		Type: "wall",
		Name: "Sample Wall",
	}

	respondJSON(w, http.StatusOK, response)
}

// UpdateElement godoc
// @Summary Обновить элемент
// @Description Обновляет свойства элемента (позиция, размеры, поворот)
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param element_id path string true "ID элемента" format(uuid)
// @Param request body dto.UpdateElementRequest true "Данные для обновления"
// @Success 200 {object} dto.ElementResponse "Обновленный элемент"
// @Failure 400 {object} dto.ErrorResponse "Ошибка валидации"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Нельзя изменить несущую стену"
// @Failure 404 {object} dto.ErrorResponse "Элемент не найден"
// @Security BearerAuth
// @Router /scenes/{id}/elements/{element_id} [patch]
func (h *SceneHandler) UpdateElement(w http.ResponseWriter, r *http.Request) {
	var req dto.UpdateElementRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		respondError(w, http.StatusBadRequest, "INVALID_JSON", "Invalid request body")
		return
	}

	// TODO: Call scene gRPC service

	response := dto.ElementResponse{
		ID:   "element-id",
		Name: req.Name,
	}

	respondJSON(w, http.StatusOK, response)
}

// DeleteElement godoc
// @Summary Удалить элемент
// @Description Удаляет элемент из сцены
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param element_id path string true "ID элемента" format(uuid)
// @Success 200 {object} dto.SuccessResponse "Элемент удален"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 403 {object} dto.ErrorResponse "Нельзя удалить несущую стену"
// @Failure 404 {object} dto.ErrorResponse "Элемент не найден"
// @Security BearerAuth
// @Router /scenes/{id}/elements/{element_id} [delete]
func (h *SceneHandler) DeleteElement(w http.ResponseWriter, r *http.Request) {
	// TODO: Call scene gRPC service

	respondJSON(w, http.StatusOK, dto.SuccessResponse{
		Success: true,
		Message: "Element deleted successfully",
	})
}

// =============================================================================
// Batch Operations
// =============================================================================

// BatchUpdateElements godoc
// @Summary Пакетное обновление элементов
// @Description Обновляет несколько элементов за одну операцию
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param request body object true "Массив обновлений"
// @Success 200 {object} object "Результат обновления"
// @Failure 400 {object} dto.ErrorResponse "Ошибка валидации"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Security BearerAuth
// @Router /scenes/{id}/elements/batch [patch]
func (h *SceneHandler) BatchUpdateElements(w http.ResponseWriter, r *http.Request) {
	var req []map[string]interface{}
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		respondError(w, http.StatusBadRequest, "INVALID_JSON", "Invalid request body")
		return
	}

	// TODO: Call scene gRPC service

	response := map[string]interface{}{
		"updated_count": len(req),
		"success":       true,
	}

	respondJSON(w, http.StatusOK, response)
}

// =============================================================================
// Export Endpoints
// =============================================================================

// ExportScene godoc
// @Summary Экспортировать сцену
// @Description Экспортирует сцену в указанный формат
// @Tags scenes
// @Accept json
// @Produce json
// @Param id path string true "ID сцены" format(uuid)
// @Param format query string true "Формат экспорта" Enums(json, obj, gltf, fbx)
// @Param branch_id query string false "ID ветки" format(uuid)
// @Success 200 {object} object "URL для скачивания"
// @Failure 401 {object} dto.ErrorResponse "Не авторизован"
// @Failure 404 {object} dto.ErrorResponse "Сцена не найдена"
// @Security BearerAuth
// @Router /scenes/{id}/export [get]
func (h *SceneHandler) ExportScene(w http.ResponseWriter, r *http.Request) {
	format := r.URL.Query().Get("format")
	if format == "" {
		format = "json"
	}

	// TODO: Call scene gRPC service

	response := map[string]interface{}{
		"download_url": "https://storage.granula.ru/exports/scene-123." + format,
		"expires_at":   "2024-11-30T12:00:00Z",
		"format":       format,
	}

	respondJSON(w, http.StatusOK, response)
}

